<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/Home"/>
    <item
        android:id="@+id/productFragment"
        android:icon="@drawable/ic_product"
        android:title="@string/Product"/>
    <item
        android:id="@+id/addProductFragment"
        android:icon="@drawable/ic_add"
        android:title="@string/Addproduct"/>
    <item
        android:id="@+id/notificationFragment"
        android:icon="@drawable/ic_notification"
        android:title="@string/Notification"/>
    <item
        android:id="@+id/accountFragment"
        android:icon="@drawable/ic_account"
        android:title="@string/Account"/>
</menu>