<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/light_green"
    android:padding="12dp"
    android:layout_marginVertical="4dp"
    android:elevation="2dp">

    <ImageView
        android:id="@+id/item_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/product"
        android:scaleType="centerCrop"
        android:background="@drawable/btn_menu_active"
        android:contentDescription="@string/product" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        android:layout_gravity="center_vertical">

        <TextView
            android:id="@+id/item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_product"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/dark_green" />
        <TextView
            android:id="@+id/item_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginTop="4dp" />
        <TextView
            android:id="@+id/item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginTop="4dp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_product"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center_vertical"
        android:backgroundTint="@color/medium_green"
        android:text="@string/Edit"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>